@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.556 2008/10/16 07:57:01 nm4 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.557 2008/12/12 14:36:37 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -76,6 +76,9 @@ NM/07 Bugzilla 769: Extraneous comma in usage fprintf
 
 NM/08 Fixed erroneous documentation references to smtp_notquit_acl to be
       acl_smtp_notquit
+
+NM/09 Bugzilla 787: Potential buffer overflow in string_format
+      Patch provided by Eugene Bujak
 
 
 Exim version 4.69
